# Mash-installer-

./: .gitattributes  .gitignore  .yamllint  BUG_REPORT_SUDO_TUI.md  CI_DEBUGGING.md  CLAUDE.md  Cargo.toml  Dockerfile  ELEGANT_SUDO_SOLUTION.md  GEMINI.md  LICENSE  MANUAL.md  OUTSTANDING_ITEMS.md  PR_SUMMARY.md  README.md  REPO_STATUS.md  SUDO_TECHNICAL_REPORT.md  SUDO_TUI_FIX_SUMMARY.md  bootstrap.sh  build_rs_cov.profraw  install.sh  maelstrom-container.toml  package-lock.json  package.json  requirements.txt  shaft-h-implementation-analysis.md  tarpaulin.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  pages.yml  pylint.yml  python-package.yml  release.yml
docs/: ARCH.md  CODE_QUALITY.md  DOCUMENT_HYGIENE_SUMMARY.md  FINAL_RELEASE_SUMMARY.md  HISTORY.md  INCIDENT_REPORTING.md  MANUAL.md  PRE_RELEASE_CHECKLIST.md  QAREPORT.md  QA_SUMMARY.md  RELEASE_PREPARATION.md  RELEASE_SUMMARY.md  REPORT.md  curated-options.md  forge-laws.md  improvement-plans.md  mine-map.md  modules.md  phase2-next-steps.md  release-process.md  testing-infrastructure.md
docs/QA/: Block-1-findings.md  Block-2-findings.md  Block-3-findings.md  PlanA.md  PlanC.md
docs/WO/: WO-001-refactor-installcontext.md  WO-002-introduce-formal-phase-trait.md  WO-004-create-flexible-phase-runner.md  WO-007-centralize-configuration-management.md  WO-009-externalize-ui-strings.md  WO-012-enhance-doctor-preflight-validation.md  WO-013-ensure-idempotency-key-operations.md  WO-015-define-user-interaction-points.md  WO-017-expand-dry-run-fidelity.md  WO-018-formalize-testing-infrastructure.md  WO-019-formalize-documentation-and-release-process.md
docs/forge-tavern/: GUILD_MEMBERS.md  MINING_GOVERNANCE.md  ORDER_OF_EXPLORATION.md  bard-bbs-profile.md  bard-quick-ref.md  maps-explored.md  maps.md
docs/incoming-files/: README.md  eza-aliases.sh  kitty.txt  software_tiers.md  wallpaper_downloader-1.py  wallpaper_downloader_README.md  wallpaper_downloader_final.py
docs/legacy/: ARCH.md  improvement-plans.md  modules.md  phase2-next-steps.md
docs/mining-projects/: SHAFT_SUMMARY.md  maps  maps-completed  maps-explored.md  maps.md  shaft-ab.md  shaft-ac.md  shafta.md  shaftb.md  shaftc.md  shaftd.md  shafte.md  shaftf.md  shaftg.md  shafth.md  shafti.md
docs/scratch/: BARD_RECOMMENDS.md  COMPLETION_ORDER_ANALYSIS.md  DEV_ENV.md  DOCUMENT_HYGIENE_IMPLEMENTATION_SUMMARY.md  DOCUMENT_HYGIENE_SYSTEM.md  EX_Y01_Phase1_Completion_Report.md  EX_Y01_Phase1_Final_Report.md  EX_Y01_Phase1_Results.md  FINAL_SUMMARY.md  HISTORY.md  PERCOLATION.md  PRODUCTION_CHECKLIST.md  README.md  REPO_STATUS.md  SHAFTJ_SUMMARY.md  SOFTWARE_GRIMOIRE.md  WALLPAPER_SCRIPT_ANALYSIS.md  bard-bbs-profile.md  bard-quick-ref.md  binary_sizes_simple.txt  build_time_baseline.txt  build_time_clean.txt  build_time_per_crate.txt  clippy_cli.txt  clippy_core.txt  clippy_installer-arch.txt  clippy_installer-debian.txt  clippy_installer-fedora.txt  clippy_wallpaper-downloader.txt  clippy_warnings.txt  common_macros.txt  dependencies_installer-arch.txt  dependencies_installer-cli.txt  dependencies_installer-core.txt  (+29 more)
installer-arch/: Cargo.toml
installer-cli/: Cargo.toml  README.md
installer-cli/src/: catalog.rs  main.rs  menu.rs  software_tiers.rs  ui.rs  ui_legacy.rs
installer-cli/src/tui/: app.rs  bbs.rs  confirmation.rs  info_box.rs  menus.rs  mod.rs  observer.rs  render.rs  state.rs  sysinfo_poller.rs  theme.rs
installer-cli/src/tui/app/: input.rs  message.rs  mod.rs  navigation.rs  software.rs
installer-cli/src/tui/menus/: helpers.rs  install.rs  landing.rs  mod.rs  scan.rs  selection.rs  software.rs  welcome.rs
installer-core/: Cargo.toml  README.md
installer-core/src/: advice.rs  ai_agents.rs  apt_repo.rs  argon.rs  authorization.rs  backend.rs  buildroot.rs  chezmoi.rs  cmd.rs  config.rs  context.rs  dependency_graph.rs  desktop.rs  desktop_environments.rs  distro.rs  docker.rs  doctor.rs  dotfiles.rs  driver.rs  dry_run.rs  error.rs  fonts.rs  github.rs  hyprland.rs  interaction.rs  lib.rs  lockfile.rs  logging.rs  options.rs  orchestrator.rs  package_manager.rs  package_spec.rs  phase_registry.rs  phase_runner.rs  pi4b.rs  pi4b_hdd.rs  pi_overlord.rs  pkg.rs  platform.rs  preset.rs  (+18 more)
installer-core/src/catalog/: mod.rs
installer-core/src/model/: mod.rs
installer-core/src/model/options/: mod.rs
installer-core/src/model/phase/: mod.rs
installer-core/src/model/preset/: mod.rs
installer-core/src/model/profile/: mod.rs
installer-core/src/model/software/: mod.rs
installer-core/src/phases/: mod.rs  pi_overlord.rs  wallpapers.rs
installer-core/src/system/: cmd.rs  dry_run.rs  error.rs  logging.rs  mod.rs  proc.rs  sudo.rs
installer-core/src/wallpaper/: config.rs  download.rs  error.rs  harvest.rs  mod.rs  tests.rs  types.rs
installer-core/src/wallpaper/api/: mod.rs  pexels.rs  pixabay.rs  wallhaven.rs
installer-core/tests/: arch_paths.rs  driver_harness.rs  error.rs  interaction.rs  phase_runner.rs  pi_overlord_tests.rs  rollback.rs  theme_integration.rs
installer-debian/: Cargo.toml
installer-drivers/: Cargo.toml
installer-fedora/: Cargo.toml
installer-model/: Cargo.toml
installer-model/src/: lib.rs
installer-model/src/config/: mod.rs
installer-model/src/options/: mod.rs
installer-model/src/phase/: mod.rs
installer-model/src/preset/: mod.rs
installer-model/src/software/: mod.rs
mash-system/: Cargo.toml
mash-system/src/: error.rs  lib.rs  logging.rs
pkg/: README.md
resources/: README.md
scripts/: README.md  auto_bump.py  auto_bump.rs  branch-prune.rs  check-docs.py  check_docs.rs  document_hygiene.rs  fix_ci_issues.sh  release-checklist.sh  release_checklist.rs  rustify.rs  setup_cross_compile.sh  test-infrastructure.sh  test-theme-manual.sh  test_infrastructure.rs  test_theme.rs  verify.sh
src/: argon.rs  config.rs  docker.rs  doctor.rs  github.rs  main.rs  pkg.rs  platform.rs  rust.rs  staging.rs  zsh.rs
wallpaper-downloader/: Cargo.toml
wallpaper-downloader/src/: api.rs  config.rs  download.rs  error.rs  lib.rs  main.rs  types.rs
workspace-hack/: Cargo.toml
(+88 files in other folders)
