[workspace]
resolver = "2"
members = [
  "installer-cli",
  "installer-core",
  "installer-drivers",
  "xtask", "workspace-hack",
]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "process", "fs", "signal", "time", "sync"] }
warp = "0.4"
futures-util = { version = "0.3", features = ["sink"] }
dirs = "6.0.0"
clap = { version = "4.0", features = ["derive"] }
nix = { version = "0.31.2", features = ["fs"] }
toml = "1.0.3"
indicatif = "0.18.4"
which = "8.0.0"
tempfile = "3"
whoami = "1.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[profile.dev]
opt-level = 1      # Snappier debug binaries for TUI testing
incremental = true # Fast rebuilds
codegen-units = 256 # Maximize parallelization for fast dev builds

# Keep dependencies fast even in debug mode
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.installer-cli]
opt-level = 1
debug = true
