[package]
name = "installer-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line entry point for the mash installer workspace"
license = "MIT"
repository = "https://github.com/drtweak86/Mash-installer"

[[bin]]
name = "mash-setup"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"
installer-core = { path = "../installer-core" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "4"
serde_json = "1"
ratatui = "0.28"
crossterm = "0.28"
sysinfo = "0.33"

# Optional distro-specific installers
installer-arch = { path = "../installer-arch", optional = true }
installer-debian = { path = "../installer-debian", optional = true }
installer-fedora = { path = "../installer-fedora", optional = true }

[features]
default = ["arch", "debian", "fedora"]
arch = ["installer-arch"]
debian = ["installer-debian"]
fedora = ["installer-fedora"]

[package.metadata.deb]
maintainer = "drtweak86"
copyright = "2024-2026, drtweak86"
license-file = ["../LICENSE", "0"]
extended-description = "Pi-optimized system installer for Mash development environments."
depends = "curl, sudo"
recommends = "git"
section = "admin"
priority = "optional"
assets = [
    ["target/release/mash-setup", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/mash-setup", dest = "/usr/bin/mash-setup", mode = "755" },
]

[package.metadata.generate-rpm.requires]
curl = "*"
sudo = "*"
