[package]
name = "installer-cli"
version = "1.1.0-alpha.2"
edition = "2021"
description = "Command-line entry point for the mash installer workspace"
license = "MIT"
repository = "https://github.com/drtweak86/Mash-installer"

[[bin]]
name = "mash-setup"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
installer-core = { path = "../installer-core" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
ratatui = "0.30.0"
crossterm = "0.29.0"
sysinfo = { workspace = true }
whoami = { workspace = true }

# Optional distro-specific installers
installer-arch = { path = "../installer-arch", optional = true }
installer-debian = { path = "../installer-debian", optional = true }
installer-fedora = { path = "../installer-fedora", optional = true }
workspace-hack = { version = "0.1.0", path = "../workspace-hack" }

[features]
default = ["arch", "debian", "fedora"]
arch = ["installer-arch"]
debian = ["installer-debian"]
fedora = ["installer-fedora"]

[package.metadata.deb]
maintainer = "drtweak86"
copyright = "2024-2026, drtweak86"
license-file = ["../docs/LICENSE", "0"]
extended-description = "Pi-optimized system installer for Mash development environments."
depends = "curl, sudo"
recommends = "git"
section = "admin"
priority = "optional"
assets = [
    ["target/release/mash-setup", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/mash-setup", dest = "/usr/bin/mash-setup", mode = "755" },
]

[package.metadata.generate-rpm.requires]
curl = "*"
sudo = "*"
