[package]
name = "installer-core"
version = "1.0.0"
edition = "2021"
description = "Core logic and invariants for the mash installer"
license = "MIT"
repository = "https://github.com/drtweak86/Mash-installer"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
dirs = "5"
nix = { version = "0.29", features = ["fs"] }
signal-hook = "0.4"
which = "7"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
num_cpus = "1"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_urlencoded = "0.7"
sha2 = "0.10"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "2.9"
slog-async = "2.7"
futures-util = "0.3"
bytes = "1.11.1"

[dev-dependencies]
tempfile = "3"
installer-arch = { path = "../installer-arch" }
installer-debian = { path = "../installer-debian" }
installer-fedora = { path = "../installer-fedora" }
