[package]
name = "installer-core"
version = "1.1.0-alpha.2"
edition = "2021"
description = "Core logic and invariants for the mash installer"
license = "MIT"
repository = "https://github.com/drtweak86/Mash-installer"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
env_logger = "0.11.9"
dirs = { workspace = true }
nix = { workspace = true }
signal-hook = "0.4.3"
which = { workspace = true }
tempfile = { workspace = true }
ureq = { version = "2.12.1", features = ["json"] }
tokio = { workspace = true }
thiserror = { workspace = true }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde_urlencoded = "0.7"
sha2 = "0.10"
futures-util = "0.3"
workspace-hack = { version = "0.1.0", path = "../workspace-hack" }

[dev-dependencies]
tempfile = { workspace = true }
installer-drivers = { path = "../installer-drivers" }
