[package]
name = "installer-model"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
sysinfo = { workspace = true }
workspace-hack = { version = "0.1.0", path = "../workspace-hack" }
