[package]
name = "wallpaper-downloader"
version = "1.0.0"
edition = "2021"
description = "Standalone wallpaper downloader binary for MASH Installer"
license = "MIT"
repository = "https://github.com/drtweak86/Mash-installer"

[dependencies]
# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI parsing
clap = { version = "4.0", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Progress reporting
indicatif = "0.17"

# File hashing
sha2 = "0.10"

# File operations
tokio-util = { version = "0.7", features = ["io"] }

# Directory handling
dirs = "6.0"

# Lazy initialization
once_cell = "1.19"

[dev-dependencies]
mockito = "1.0"

[[bin]]
name = "wallpaper-downloader"
path = "src/main.rs"
