[package]
name = "wallpaper-downloader"
version = "1.1.0-alpha.2"
edition = "2021"
description = "Standalone wallpaper downloader binary for MASH Installer"
license = "MIT"
repository = "https://github.com/drtweak86/Mash-installer"

[dependencies]
# HTTP client
reqwest = { version = "0.13.2", default-features = false, features = ["json", "stream", "rustls", "query"] }

# Async runtime
tokio = { workspace = true }

# JSON handling
serde = { workspace = true }
serde_json = { workspace = true }

# CLI parsing
clap = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = "0.4"
env_logger = "0.11.9"

# Progress reporting
indicatif = { workspace = true }

# File hashing
sha2 = "0.10"

# File operations
tokio-util = { version = "0.7", features = ["io"] }

# Directory handling
dirs = { workspace = true }

# Lazy initialization
once_cell = "1.19"

[dev-dependencies]
mockito = "1.0"

[[bin]]
name = "wallpaper-downloader"
path = "src/main.rs"
